@@ -5,5 +5,6 @@
 	<label index="timetrackedRoles">Rollen haben Zeit erfasst</label>
 	<label index="person.trackedinproject">Hat Zeit in Projekt erfasst</label>
 	<label index="person.trackedforcustomer">Hat Zeit in Projekt von Firma erfasst</label>
-	<label index="overbookedAbsolute">Überbuchte Aufgaben (Absolut in Minuten)</label>
+	<label index="overbookedAbsolute">Überbuchte Aufgaben, absolut in Minuten</label>
+	<label index="overbookedPercent">Überbuchte Aufgaben, Prozent (Minimum)</label>
 </labels>
