@@ -5,5 +5,6 @@
 	<label index="timetrackedRoles">Roles have tracked time</label>
 	<label index="person.trackedinproject">Tracked time in project</label>
 	<label index="person.trackedforcustomer">Tracked time in project of customer</label>
-	<label index="overbookedAbsolute">Overbooked tasks (absolute in minutes)</label>
+	<label index="overbookedAbsolute">Overbooked tasks absolute in minutes</label>
+	<label index="overbookedPercent">Overbooked tasks in percent (minimum)</label>
 </labels>
